# jasp-desktop

./: .cmake-format.yaml  .cpack-ignore  .editorConfig  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGES.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CPack.cmake  Checks.cmake  Dependencies.cmake  Deploy.cmake.in  Install.cmake  JASP-R-Interface-Windows.pro  JASP-R-Interface6.1.lib  JASP-win.pro  JASP.cmake  JASP.po  JASP.pri  JASP.pro  JASP.pro.user.old  JASPEngine-win.pro  JASP_desktop.pro  JASP_engine.pro  Modules.cmake  NOTICE.txt  Pack.cmake  Patch.cmake  PatchR.cmake  R.cmake  R.framework.cmake  README.md  R_HOME.pri  R_INSTALL_CMDS.pri  Sign.cmake.in  common.pri  (+9 more)
Common/: CMakeLists.txt  Common.pro  appinfo.cpp  appinfo.cpp.in  appinfo.h  archivereader.cpp  archivereader.h  column.cpp  column.h  columnencoder.cpp  columnencoder.h  columns.cpp  columns.h  columntype.cpp  columntype.h  common.h  datablock.h  dataset.h  dirs.cpp  dirs.h  emptyvalues.cpp  emptyvalues.h  enginedefinitions.h  enumutilities.h  filereader.cpp  filereader.h  ipcchannel.cpp  ipcchannel.h  jsonredirect.h  label.cpp  label.h  labels.cpp  labels.h  log.cpp  log.h  otoolstuff.cpp  otoolstuff.h  processinfo.cpp  processinfo.h  r_functionwhitelist.cpp  (+16 more)
Common/json/: json_reader.cpp  json_writer.cpp
Common/lib_json/: json_reader.cpp  json_writer.cpp
Common/libzip/: archive_entry.h
CommonQt/: CMakeLists.txt  appdirs.cpp  appdirs.h
Desktop/: CMakeLists.txt  Desktop.pro  JASP.exe.manifest  activemodules.h.in  communitydefs.h  cooperativedefs.h  main.cpp  mainwindow.cpp  mainwindow.h  qml.qrc
Desktop/analysis/: analyses.cpp  analyses.h  analysis.cpp  analysis.h  analysisbase.cpp  analysisbase.h  analysisform.cpp  analysisform.h  boundcontrol.h  boundcontrolbase.cpp  boundcontrolbase.h  boundqmlitem.h  jaspcontrol.cpp  jaspcontrol.h  jaspcontrolbase.h  jaspdoublevalidator.cpp  jaspdoublevalidator.h  knownissues.cpp  knownissues.h  term.cpp  term.h  terms.cpp  terms.h  variableinfo.cpp  variableinfo.h
Desktop/data/: asyncloader.cpp  asyncloader.h  asyncloaderthread.cpp  asyncloaderthread.h  columnModel.cpp  columnModel.h  columnmodel.cpp  columnmodel.h  columnsmodel.cpp  columnsmodel.h  computedcolumn.h  computedcolumnmodel.cpp  computedcolumnmodel.h  computedcolumns.cpp  computedcolumns.h  computedcolumnsmodel.cpp  computedcolumnsmodel.h  databaseconnectioninfo.cpp  databaseconnectioninfo.h  datasetdefinitions.cpp  datasetdefinitions.h  datasetloader.cpp  datasetloader.h  datasetpackage.cpp  datasetpackage.h  datasetpackageenums.cpp  datasetpackageenums.h  datasetpackagesubnodemodel.cpp  datasetpackagesubnodemodel.h  datasettablemodel.cpp  datasettablemodel.h  datasettableproxy.cpp  datasettableproxy.h  expanddataproxymodel.cpp  expanddataproxymodel.h  fileevent.cpp  fileevent.h  filtermodel.cpp  filtermodel.h  labelfiltergenerator.cpp  (+7 more)
Desktop/engine/: enginerepresentation.cpp  enginerepresentation.h  enginesync.cpp  enginesync.h  rscriptstore.h
Desktop/gui/: .gitignore  aboutmodel.cpp  aboutmodel.h  altnavigation.cpp  altnavigation.h  altnavpostfixassignmentstrategy.cpp  altnavpostfixassignmentstrategy.h  altnavroot.cpp  altnavroot.h  altnavscope.cpp  altnavscope.h  altnavtag.cpp  altnavtag.h  columntypesmodel.cpp  columntypesmodel.h  jaspconfiguration.cpp  jaspconfiguration.h  jaspversionchecker.cpp  jaspversionchecker.h  messageforwarder.cpp  messageforwarder.h  pdfdefinition.cpp  pdfdefinition.h  preferencesmodel.cpp  preferencesmodel.cpp.in  preferencesmodel.h  preferencesmodelbase.cpp  remotesettings.cpp  remotesettings.h
Desktop/html/: html.qrc  index-jasp.html  index.html  readme.txt
Desktop/modules/: activemodules.h.in  analysisentry.cpp  analysisentry.h  analysismenumodel.cpp  analysismenumodel.h  dynamicmodule.cpp  dynamicmodule.h  dynamicmodules.cpp  dynamicmodules.h  menumodel.cpp  menumodel.h  ribbonbutton.cpp  ribbonbutton.h  ribbonmodel.cpp  ribbonmodel.h  ribbonmodelfiltered.cpp  ribbonmodelfiltered.h  ribbonmodeluncommon.cpp  ribbonmodeluncommon.h
Desktop/osf/: onlinedataconnection.h  onlinedatamanager.cpp  onlinedatamanager.h  onlinedatanode.cpp  onlinedatanode.h  onlinedatanodeosf.cpp  onlinedatanodeosf.h  onlinenode.cpp  onlinenode.h  onlineusernode.cpp  onlineusernode.h  onlineusernodeosf.cpp  onlineusernodeosf.h  osfnam.cpp  osfnam.h
Desktop/po/: jaspDesktop-ar.po  jaspDesktop-cs.po  jaspDesktop-cy.po  jaspDesktop-de.po  jaspDesktop-eo.po  jaspDesktop-es.po  jaspDesktop-fr.po  jaspDesktop-gl.po  jaspDesktop-hu.po  jaspDesktop-id.po  jaspDesktop-it.po  jaspDesktop-ja.po  jaspDesktop-nl.po  jaspDesktop-pl.po  jasp_es.po  (+9 more)
Engine/: CMakeLists.txt  Engine.pro  JASPEngine.exe.manifest  engine.cpp  engine.h  main.cpp  otoolstuff.cpp  otoolstuff.h  rbridge.cpp  rbridge.h
QMLComponents/: CMakeLists.txt  analysisbase.cpp  analysisbase.h  analysisform.cpp  analysisform.h  jasptheme.cpp  jasptheme.h  knownissues.cpp  knownissues.h  preferencesmodelbase.cpp  preferencesmodelbase.h  sortable.cpp  sortable.h  variableinfo.cpp  variableinfo.h
QMLForm/: CMakeLists.txt  analysisbase.cpp  analysisform.cpp  analysisform.h  boundcontrolbase.cpp  boundcontrolbase.h  boundcontroljagstextarea.cpp  boundcontrollavaantextarea.cpp  boundcontrollavaantextarea.h  boundcontrollayers.cpp  boundcontrolmeasurescells.cpp  boundcontrolmeasurescells.h  boundcontrolsourcetextarea.cpp  boundcontroltableview.cpp  boundcontroltableview.h  boundcontrolterms.cpp  boundcontrolterms.h  checkboxbase.h  comboboxbase.h  componentslistbase.h  factorlevellistbase.h  factorsformbase.cpp  factorsformbase.h  inputlistbase.h  jaspcontrol.h  jasplistcontrol.cpp  jasplistcontrol.h  jasptheme.cpp  knownissues.cpp  knownissues.h  listmodel.cpp  listmodelassignedinterface.cpp  listmodelcustomcontrasts.cpp  listmodeldraggable.cpp  listmodeldraggable.h  listmodelfactorlevels.cpp  listmodelfactorsform.cpp  listmodelfiltereddataentry.cpp  listmodelinputvalue.cpp  listmodelinteractionassigned.cpp  (+23 more)
R-Interface/: CMakeLists.txt  R-Interface.pro  jasprcpp.cpp  jasprcpp.h  jasprcpp_interface.h
(+5070 files in other folders)
